# TEF-Master-Local

./: .gitignore  README.md  TEF_Research.md  TEF_Research.md:Zone.Identifier  ai_handler.py  app.py  capture_screenshots.py  config.py  database.py  git_setup.sh  launch.bat  launch.sh  ollama_handler.py  push_to_github.sh  pyproject.toml  rebuild_history.sh  requirements.txt  secrets.toml.example  setup.sh  setup_env.bat
.streamlit/: config.toml
components/: __init__.py  progress_bar.py
data/: __init__.py  resources.py  syllabus.py  writing_prompts.py
modules/: __init__.py  ai_tutor.py  resources.py  roadmap.py  voice_tutor.py  writing_clinic.py
